Add style to search page, update the navbar

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pokepedia</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
@@ -17,11 +24,11 @@
             <nav>
                 <div id="menu">
                     <ul>
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Our Products</a></li>
-                        <li><a href="#">Careers</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li class="active"><a href="index.html">Home</a></li>
+                        <li><a href="#">Intro</a></li>
+                        <li><a href="search.html">Search & Filter</a></li>
+                        <li><a href="#">Search History</a></li>
+                        <li><a href="#">Contact Me</a></li>
                     </ul>
                 </div>
             </nav>
@@ -50,3 +57,5 @@
     </footer>
 
 </body>
+
+</html>
