Implement filter pokemon by type

--- a/public/search.html
+++ b/public/search.html
@@ -59,8 +59,6 @@
         <option value="dragon">dragon</option>
         <option value="dark">dark</option>
         <option value="fairy">fairy</option>
-        <option value="unknown">unknown</option>
-        <option value="shadow">shadow</option>
     </select>
     </div>
     <div class="filter">
@@ -84,6 +82,15 @@
     <main>
 
     </main>
+    <footer>
+        <h4>Copyright &copy; Stefan's Pokemon Index 2022</h4>
+        <!-- 把logo换成自己的github linkedin和email -->
+        <div id="logo_container">
+            <img src="./icons/twitter.png" alt="twitter" width="50px" height="50px">
+            <img src="./icons/facebook.png" alt="facebook" width="50px" height="50px">
+            <img src="./icons/instagram.png" alt="instagram" width="50px" height="50px">
+        </div>
+    </footer>
 </body>
 
 </html>
