Implement search by name

--- a/public/search.html
+++ b/public/search.html
@@ -75,7 +75,7 @@
     </select>
     </div>
     <div class="filter">Search by Name
-        <input type="text" id="movie-title">
+        <input type="text" id="name-input">
         <button id="search-btn">Search</button>
     </div>
     </div>
